# Parallel-Eagle

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: demo.py  mem_scaling.py  plot.py  run_bench.py
results/: benchmark.csv  mem_scaling.csv
scripts/: quickstart.py
src/pe/: __init__.py  config.py  distill.py  drafter.py  features.py  partition.py  serve.py  target.py  train.py
src/pe/decode/: baselines.py
tests/: test_config.py  test_distill.py  test_e2e.py  test_target.py
