[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-eagle"
version = "0.1.0"
description = "Feature-conditioned parallel-drafting speculative decoder with dynamic tree verification"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
train = ["bitsandbytes>=0.43"]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
